# RNN_Poetry_Generation

./: .gitignore  PROJECT_EXPLANATION.md  README.md  main.py  pyproject.toml  requirements.txt
poetry_gen/: __init__.py  dataset.py  exceptions.py  generator.py  logger.py  model.py
