[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poetry_gen"
version = "0.1.0"
description = "A production-ready RNN-based poetry generator using LSTM in TensorFlow/Keras."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "tensorflow>=2.15.0",
    "keras>=3.0.0",
    "requests>=2.31.0",
]

[project.scripts]
poetry-gen = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["poetry_gen*"]
